--- a/routine.html
+++ b/routine.html
@@ -147,12 +147,14 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Weight lifting twice a week</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
-<tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
+<tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>        </td><td>AudioCardio app one hour while working </td>
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, dandelion greens, berries, lemon juice, water</td>
+<tr><td>        </td><td>Vegetable mashup drink</td>
+<tr><td>        </td><td>Beet kvass drink</td>
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>12:30 PM </td><td>Lunch</td>   
@@ -248,7 +250,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Ozone dialysis therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Ozone EBO2 therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Bioregulator peptides</td>
 </table>
