--- a/routine.html
+++ b/routine.html
@@ -153,8 +153,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, dandelion greens, berries, lemon juice, water</td>
-<tr><td>        </td><td>Vegetable mashup drink</td>
-<tr><td>        </td><td>Beet kvass drink</td>
+<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>
+<tr><td>        </td><td>Fermented beet kvass drink</td>
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>12:30 PM </td><td>Lunch</td>   
@@ -375,6 +375,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Blood flow restriction training </td>
 <tr><td> </td><td>Grow all food in my own garden </td>
 <tr><td> </td><td>Oxygen hot tub </td>
+<!--<tr><td> </td><td>Grounding mat from ultimatelongevity.com/ben</td>-->
 </table>
 
 
