--- a/routine.html
+++ b/routine.html
@@ -311,6 +311,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
 <tr><td> </td><td>Cell phone permanently in airplane mode</td>
 <tr><td> </td><td>Cell phone connected to Internet with ethernet adapter</td>
+<tr><td> </td><td>Raise front of bed to be at a 5% angle</td>
 </table>
 
 <br>
