--- a/routine.html
+++ b/routine.html
@@ -235,6 +235,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Go outside, look far away</td>
 <tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
 <tr><td> </td><td>Drink water (8 cups per day)</td>
+<tr><td> </td><td>4-7-8 breathing</td>
 </table>
 
 <br>
@@ -255,6 +256,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Bioregulator peptides</td>
 </table>
 
+              
+<!--
 <br>
 <p><b>Bioregulator Peptide Routine</b></p>
 <table style="celllpadding: 100px">
@@ -266,9 +269,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Cardiogen, 100mcg</td>
 <tr><td> </td><td>Cortagen, 100mcg</td>
 <tr><td> </td><td>Crystagen, 100mcg</td>
-<!--bacteriostatic water throw out after 30 days -->
-<!--throw out peptides after 30 days?-->
+--bacteriostatic water throw out after 30 days --
+--throw out peptides after 30 days?--
 </table>
+-->
 
 <br>
 <p><b>Biyearly Routine</b></p>
@@ -290,6 +294,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
 <!--<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>-->
+<tr><td> </td><td>Check blood pressure</td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
@@ -297,7 +302,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> <!-- Actionable?-->
 <tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
-<tr><td> </td><td>Genova Diagnostics, ION Profile</td>
+<tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 </table>
 
 <br>
