--- a/routine.html
+++ b/routine.html
@@ -164,7 +164,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
-<tr><td>4:00 PM </td><td>Drink water</td>
+<tr><td>4:00 PM </td><td>Drink fermented kvass</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
@@ -211,9 +211,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Morning Supplements in powder form</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
-<tr><td>        </td><td>Pomela powder, Nootropics Depot, 1/16 tsp</td>
+<tr><td>        </td><td>Cinnamon powder, 1/4 tsp</td>
 <tr><td>        </td><td>Blue-Green Algae Powder, Pure Synergy, 1/2 tsp</td>
 <tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>
+<tr><td>        </td><td>Apple peel powder, 1 tsp</td>
 </table>
 
 
