--- a/routine.html
+++ b/routine.html
@@ -202,6 +202,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Do Not Age, 1 capsule</td>
+<tr><td>        </td><td>Matcha Power, Pure Synergy, 1 capsule</td>
+<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>
