--- a/routine.html
+++ b/routine.html
@@ -163,6 +163,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Brisk walk outside for glucose uptake, and to get dopamine into eyes to prevent myopia</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
+<tr><td>3:30 PM </td><td>If I missed the morning exercise then exercise now</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
 <tr><td>4:00 PM </td><td>Drink fermented kvass</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
@@ -172,6 +173,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsulle</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
@@ -189,17 +191,16 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 2000IU</td>
-<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td>
+<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td> <!-- change to krill -->
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Organ Synergy, Designs For Health, 3 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
-<tr><td>        </td><td>Aloe/200x, Designs For Health, 1 capsule</td>
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Do Not Age, 1 capsule</td>
 <tr><td>        </td><td>Matcha Power, Pure Synergy, 1 capsule</td>
@@ -224,6 +225,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Rinse mouth with xylitol before eating </td>
+<tr><td>        </td><td>Glycine, about 3 grams</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 </table>
