--- a/routine.html
+++ b/routine.html
@@ -372,6 +372,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No mouthwash </td>
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
+    
+<tr><td> </td><td>No loud noise - this causes hearing loss</td>
+
 <!--<tr><td> </td><td>Do not put fingers in nose</td>-->
 <!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td>-->
 <!--<tr><td> </td><td>Do not store toothbrush in bathroom</td>-->
