--- a/routine.html
+++ b/routine.html
@@ -144,7 +144,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
 <tr><td>        </td><td>Weigh self on scale</td>
-<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, interval training</td>
+<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, jogging, interval training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
