--- a/routine.html
+++ b/routine.html
@@ -251,6 +251,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>        </td><td>Look far away </td>
 </table>
+              
+<br>
+<p><b>Monthly Routine</b></p>
+<table style="celllpadding: 100px">
+<tr><td>        </td><td>Dehumidifier maintenance </td>
+</table>
 
 <br>
 <p><b>Quarterly Routine</b></p>
@@ -300,6 +306,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <!--<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>-->
 <tr><td> </td><td>Check blood pressure</td>
+<tr><td> </td><td>Check humidity level of home</td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
@@ -316,12 +323,13 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/ophora-bio-quantum" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house water filter <a href="https://shop.ophorawater.com/collections/whole-home-systems/products/ophora-uf-filtration-series" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
+<tr><td> </td><td>Dehumidifier to prevent mold</td>
 <tr><td> </td><td>Cookware from xtrema.com </td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
 <tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
 <tr><td> </td><td>Cell phone permanently in airplane mode</td>
 <tr><td> </td><td>Cell phone connected to Internet with ethernet adapter</td>
-<tr><td> </td><td>Raise front of bed to be at a 5% angle</td>
+<!--<tr><td> </td><td>Raise front of bed to be at a 5% angle</td>-->
 </table>
 
 <br>
