--- a/contact.html
+++ b/contact.html
@@ -139,8 +139,7 @@
             <p>
             <b>Address</b> <br>
               Institute of Regeneration <br>
-              6440 S Millrock Dr. <br>
-              Salt Lake City, UT 84121 <br>
+              To be determined <br>
             </p>
 
             <p>
