--- a/routine.html
+++ b/routine.html
@@ -146,26 +146,24 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Weigh self on scale</td>
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, jogging, interval training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
-<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>
+<!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>        </td><td>AudioCardio app one hour while working </td>
-<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>
+<!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
-<tr><td>        </td><td>Blend avocado, dandelion greens, berries, lemon juice, water</td>
-<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>
-<tr><td>        </td><td>Fermented beet kvass drink</td>
+<tr><td>        </td><td>Blend avocado, dandelion greens, sage leaves, berries, lemon juice, water</td>
+<!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>12:30 PM </td><td>Lunch</td>   
-<tr><td>        </td><td>Soup consisting of lentils, onion, pork, with sunflower sprouts, berries</td>    
+<tr><td>        </td><td>Soup consisting of lentils, leaks, pork, with sunflower sprouts, berries</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics, 1 capsule</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake, and to get dopamine into eyes to prevent myopia</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
-<tr><td>3:30 PM </td><td>If I missed the morning exercise then exercise now</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
-<tr><td>4:00 PM </td><td>Drink fermented kvass</td>
+<tr><td>4:00 PM </td><td>Drink fermented kvass</td> <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
@@ -215,9 +213,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
 <tr><td>        </td><td>Cinnamon powder, 1/4 tsp</td>
-<tr><td>        </td><td>Blue-Green Algae Powder, Pure Synergy, 1/2 tsp</td>
-<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>
-<tr><td>        </td><td>Apple peel powder, 1 tsp</td>
+<!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
+<!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 </table>
 
 
@@ -240,7 +237,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Go outside, look far away</td>
 <tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
 <tr><td> </td><td>Drink water (8 cups per day)</td>
-<tr><td> </td><td>4-7-8 breathing</td>
+<!--<tr><td> </td><td>4-7-8 breathing</td>-->
 </table>
 
 <br>
@@ -264,7 +261,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Ozone EBO2 therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Bioregulator peptides</td>
+<!--<tr><td> </td><td>Bioregulator peptides</td>-->
 </table>
 
               
@@ -304,17 +301,16 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
-<!--<tr><td> </td><td>Possibly: Extracorporeal blood oxygenation and ozonation </td>-->
+<tr><td> </td><td>Genova Diagnostics, ION Panel</td>
+<tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
+<tr><td> </td><td>Great Plains Labs, GPLTOX</td>
+<tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
+<!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
 <tr><td> </td><td>Check blood pressure</td>
 <tr><td> </td><td>Check humidity level of home</td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
-<tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
-<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> <!-- Actionable?-->
-<tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
-<tr><td> </td><td>Great Plains Labs, GPLTOX</td>
-<tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 </table>
 
 <br>
