--- a/routine.html
+++ b/routine.html
@@ -122,7 +122,7 @@
 
             <!-- Heading -->
             <h1 class="display-4 text-center">
-              My Routine
+              David's Health Blueprint
             </h1>
 
           </div>
@@ -163,12 +163,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
-<tr><td>4:00 PM </td><td>Drink fermented kvass</td> <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a>
+<tr><td>4:00 PM </td><td>Drink fermented kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsulle</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
