--- a/routine.html
+++ b/routine.html
@@ -149,6 +149,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<tr><td>        </td><td>While walking practice intermittent hypoxic training </td>
 <tr><td>        </td><td>AudioCardio app one hour while working </td>
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
