--- a/routine.html
+++ b/routine.html
@@ -145,7 +145,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
 <tr><td>        </td><td>Weigh self on scale</td>
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, jogging, interval training</td>
-<tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
+<tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
@@ -173,6 +173,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
+<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
@@ -189,24 +190,30 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Morning Supplements</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Vitamin D3, Jarrow, 2000IU</td>
+<tr><td>        </td><td>Vitamin D3, Jarrow, 2500IU</td>
 <tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td> <!-- change to krill -->
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
+<tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
-<tr><td>        </td><td>Organ Synergy, Designs For Health, 3 capsules</td>
+<tr><td>        </td><td>Organ Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
+<tr><td>        </td><td>Annatto-E 150, Designs For Health, 1 capsules</td>
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
-<tr><td>        </td><td>Hyaluronic acid, Do Not Age, 1 capsule</td>
+<tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Matcha Power, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
+<tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>
 <tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>
+<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>
 </table>
 
 <br>
@@ -223,9 +230,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Rinse mouth with xylitol before eating </td>
-<tr><td>        </td><td>Glycine, about 3 grams</td>
+<tr><td>        </td><td>Glycine powder, Vital Nutrients, about 3 grams</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
-<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
+<tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
 
               
@@ -233,9 +240,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Stand at a standup desk while working</td>
-<tr><td> </td><td>Correct spine posture</td>
+<tr><td> </td><td>Maintain correct spine posture</td>
 <tr><td> </td><td>Various short exercises</td>
-<tr><td> </td><td>Go outside, look far away</td>
+<tr><td> </td><td>Go outside</td>
 <tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
 <tr><td> </td><td>Drink water (8 cups per day)</td>
 <!--<tr><td> </td><td>4-7-8 breathing</td>-->
@@ -292,7 +299,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for a few days before test) </td>
+<tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for 4-7 days before test) </td>
 <tr><td> </td><td>Stool occult blood immunoassay</td>
 <tr><td> </td><td>Replace whole house water filter </td>
 <tr><td> </td><td>Replace kitchen water filter </td>
@@ -319,7 +326,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/ophora-bio-quantum" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house water filter <a href="https://shop.ophorawater.com/collections/whole-home-systems/products/ophora-uf-filtration-series" target="_blank">Link</a></td>
-<tr><td> </td><td>Whole house air filter from iqair.com</td>
+<tr><td> </td><td>Whole house air filter <a href="https://www.intellipure.com/product/ultrafine-whole-house-air-cleaner/" target="_blank">Link</a></td>
 <tr><td> </td><td>Dehumidifier to prevent mold</td>
 <tr><td> </td><td>Cookware from xtrema.com </td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
@@ -391,9 +398,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Sauna with electrolytes </td>
 <tr><td> </td><td>PEMF therapy </td>
 <tr><td> </td><td>Exosomes</td>
-<tr><td> </td><td>Blood flow restriction training </td>
 <tr><td> </td><td>Grow all food in my own garden </td>
 <tr><td> </td><td>Oxygen hot tub </td>
+<!--<tr><td> </td><td>Analemma Water whole house unit</td>-->
 <!--<tr><td> </td><td>Grounding mat from ultimatelongevity.com/ben</td>-->
 </table>
 
