--- a/routine.html
+++ b/routine.html
@@ -313,6 +313,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
+<tr><td> </td><td>Check genetic data at puregenomics.com</td>
 <!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
 <tr><td> </td><td>Check blood pressure</td>
 <tr><td> </td><td>Check humidity level of home</td>
