--- a/routine.html
+++ b/routine.html
@@ -153,7 +153,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>AudioCardio app one hour while working </td>
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
-<tr><td>        </td><td>Blend avocado, dandelion greens, sage leaves, berries, lemon juice, water</td>
+<tr><td>        </td><td>Blend avocado, frisee, endive, dandelion, sage, berries, lemon juice, water</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements</td>
@@ -172,7 +172,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
@@ -203,12 +203,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 3 capsules</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Matcha Power, Pure Synergy, 1 capsule</td>
-<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>
+<!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>
@@ -220,7 +220,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Morning Supplements in powder form</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
-<tr><td>        </td><td>Cinnamon powder, 1/4 tsp</td>
+<tr><td>        </td><td>Ceylon Cinnamon powder, 1/4 tsp</td>
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 </table>
