--- a/routine.html
+++ b/routine.html
@@ -144,12 +144,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
 <tr><td>        </td><td>Weigh self on scale</td>
-<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, jogging, interval training</td>
+<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>        </td><td>While walking practice intermittent hypoxic training </td>
 <tr><td>        </td><td>AudioCardio app one hour while working </td>
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
@@ -159,7 +158,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>12:30 PM </td><td>Lunch</td>   
 <tr><td>        </td><td>Soup consisting of lentils, leaks, pork, with sunflower sprouts, berries</td>
-<tr><td>        </td><td>EnzymixPro, Apex Energetics, 1 capsule</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake, and to get dopamine into eyes to prevent myopia</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
@@ -167,7 +165,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>4:00 PM </td><td>Drink fermented kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
-<tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
@@ -229,8 +226,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>Rinse mouth with xylitol before eating </td>
-<tr><td>        </td><td>Glycine powder, Vital Nutrients, about 3 grams</td>
+<tr><td>        </td><td>Before eating rinse mouth with xylitol </td>
+<tr><td>        </td><td>At start of meal, glycine powder, Vital Nutrients, about 3-4 grams</td>
+<tr><td>        </td><td>At start of meal, EnzymixPro, Apex Energetics, 1 capsule</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
@@ -254,6 +252,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Apply mineral sunscreen to face </td>
 <tr><td>        </td><td>Wear UV-blocking glasses to protect eyes from UV light </td>
 <tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
+<tr><td>        </td><td>Practice intermittent hypoxic training </td>
 <tr><td>        </td><td>Look far away </td>
 </table>
               
@@ -325,7 +324,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>One-time setup</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/ophora-bio-quantum" target="_blank">Link</a></td>
+<tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/bio-renew-system" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house water filter <a href="https://shop.ophorawater.com/collections/whole-home-systems/products/ophora-uf-filtration-series" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house air filter <a href="https://www.intellipure.com/product/ultrafine-whole-house-air-cleaner/" target="_blank">Link</a></td>
 <tr><td> </td><td>Dehumidifier to prevent mold</td>
