--- a/routine.html
+++ b/routine.html
@@ -376,8 +376,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal x-rays and CT scans</td>
 <tr><td> </td><td>Minimal TV</td>
 
-<tr><td> </td><td>No fluorescent lights</td>
+<tr><td> </td><td>No carpet, only hardwood floors</td>
 <tr><td> </td><td>No gas stoves, use only electric</td>
+<tr><td> </td><td>No fluorescent lights</td>
+
 <tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
 <tr><td> </td><td>No mouth breathing</td>
