--- a/routine.html
+++ b/routine.html
@@ -156,8 +156,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements</td>
-<tr><td>12:30 PM </td><td>Lunch</td>   
+<tr><td>12:30 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Soup consisting of lentils, leaks, pork, with sunflower sprouts, berries</td>
+<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake, and to get dopamine into eyes to prevent myopia</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
@@ -312,7 +313,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
-<tr><td> </td><td>Check genetic data at puregenomics.com</td>
+<tr><td> </td><td>Check genetic data at PureGenomics <a href="https://www.puregenomics.com/" target="_blank">Link</a></td>
+<tr><td> </td><td>Check EWG water filter functionality <a href="https://www.ewg.org/tapwater/system.php?pws=CA0710003" target="_blank">Link</a></td>
+<tr><td> </td><td>Check Bristle dental test results <a href="https://www.bristlehealth.com/" target="_blank">Link</a></td>
 <!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
 <tr><td> </td><td>Check blood pressure</td>
 <tr><td> </td><td>Check humidity level of home</td>
@@ -397,6 +400,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Future Plans</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>NanoVi <a href="https://eng3corp.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Sauna with electrolytes </td>
 <tr><td> </td><td>PEMF therapy </td>
 <tr><td> </td><td>Exosomes</td>
