--- a/routine.html
+++ b/routine.html
@@ -168,7 +168,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
-<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
+<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
