--- a/routine.html
+++ b/routine.html
@@ -152,20 +152,22 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>AudioCardio app one hour while working </td>
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
-<tr><td>        </td><td>Blend avocado, frisee, endive, dandelion, sage, berries, lemon juice, water</td>
+<tr><td>        </td><td>Blend avocado, frisee, endive, dandelion, sage, berries, lemon juice, water.</td>
+<tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to support a diverse microbiome</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
-<tr><td>        </td><td>Morning supplements</td>
+<tr><td>        </td><td>Morning supplements (See list below)</td>
 <tr><td>12:30 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Soup consisting of lentils, leaks, pork, with sunflower sprouts, berries</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Brisk walk outside for glucose uptake, and to get dopamine into eyes to prevent myopia</td>
+<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
+<tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
-<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
-<!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
-<tr><td>4:00 PM </td><td>Drink fermented kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
+<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
+<tr><td>4:00 PM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
+<tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td>
@@ -256,7 +258,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Practice intermittent hypoxic training </td>
 <tr><td>        </td><td>Look far away </td>
 </table>
-              
+    
 <br>
 <p><b>Monthly Routine</b></p>
 <table style="celllpadding: 100px">
@@ -401,11 +403,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Future Plans</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>NanoVi <a href="https://eng3corp.com/" target="_blank">Link</a></td>
+<tr><td> </td><td>PEMF <a href="https://sedonawellness.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Sauna with electrolytes </td>
-<tr><td> </td><td>PEMF therapy </td>
+<tr><td> </td><td>Oxygen hot tub </td>
 <tr><td> </td><td>Exosomes</td>
 <tr><td> </td><td>Grow all food in my own garden </td>
-<tr><td> </td><td>Oxygen hot tub </td>
 <!--<tr><td> </td><td>Analemma Water whole house unit</td>-->
 <!--<tr><td> </td><td>Grounding mat from ultimatelongevity.com/ben</td>-->
 </table>
