--- a/routine.html
+++ b/routine.html
@@ -153,7 +153,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, frisee, endive, dandelion, sage, berries, lemon juice, water.</td>
-<tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to support a diverse microbiome</td>
+<tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements (See list below)</td>
@@ -207,7 +207,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
-<tr><td>        </td><td>Matcha Power, Pure Synergy, 1 capsule</td>
+<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
@@ -319,6 +319,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Review genetic data at PureGenomics <a href="https://www.puregenomics.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Review EWG water filter functionality <a href="https://www.ewg.org/tapwater/system.php?pws=CA0710003" target="_blank">Link</a></td>
 <tr><td> </td><td>Review Bristle dental microbiome results <a href="https://www.bristlehealth.com/" target="_blank">Link</a></td>
+<tr><td> </td><td>Review nutrition at cronometer.com</td>
 <!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
 <tr><td> </td><td>Check blood pressure</td>
 <tr><td> </td><td>Check humidity level of home</td>
