--- a/routine.html
+++ b/routine.html
@@ -312,6 +312,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
+<tr><td> </td><td>Genova Diagnostics, GI Effects Stool Profile</td>
 <tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
